# adaptative-rag

./: .gitignore  IMPLEMENTATION_SUMMARY.md  QUICK_REFERENCE.md  README.md  SETUP.md  pyproject.toml
configs/: config.yaml
configs/model/: minilm.yaml
configs/retrieval/: dense.yaml
docs/: ARCHITECTURE.md  CONFIGURATION.md  MILESTONE_1.md  README.md  VISUAL_GUIDE.md
scripts/: build_index.py  evaluate.py  retrieve.py
src/: __init__.py
src/evaluation/: __init__.py  evaluator.py  metrics.py
src/retrieval/: __init__.py  embedder.py  retriever.py  vector_store.py
tests/: __init__.py  test_metrics.py  test_preprocessor.py  test_vector_store.py
